fix_explorer_paddings_and_scrollbars

--- a/src/new_components/Accounts/styles.less
+++ b/src/new_components/Accounts/styles.less
@@ -288,7 +288,7 @@
 }
 
 .dialog{
-  padding: 48px 0 24px 0;
+  padding: 48px;
 }
 
 .dialog_btn {
